@@ -1,3 +1,12 @@
+2005-06-02 Jorg Schuler <jcsjcs@users.sourceforge.net>
+
+	* Fixed bug for display and reading of compilation flag
+          (display reversed, wrong offset during read)
+
+	* Fixed bug for reading of type entry (wrong offset)
+
+	(thanks	to Julien Oster for the patch)
+
 2005-05-30 Jorg Schuler <jcsjcs@users.sourceforge.net>
 
 	* itdb_cp_track_to_ipod(): no longer uses ipod-ID to create
